unpackaged/main/default/objects/Account/fields/AMER_timezone__c.field-meta.xml
<CustomField>
    <fullName>AMER_timezone__c</fullName>
    <label>AMER timezone</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>EST</fullName>
            </value>
            <value>
                <fullName>CST</fullName>
            </value>
            <value>
                <fullName>Mountain</fullName>
            </value>
            <value>
                <fullName>PST</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>