unpackaged/main/default/objects/Account/fields/my_currency_field__c.field-meta.xml
<CustomField>
    <fullName>my_currency_field__c</fullName>
    <label>my_currency_field</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>