unpackaged/main/default/objects/Account/fields/my_custom_field__c.field-meta.xml
<CustomField>
    <fullName>my_custom_field__c</fullName>
    <label>my_custom_field</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>