unpackaged/main/default/objects/Account/recordTypes/cb_record_type.recordType-meta.xml
<RecordType>
    <fullName>cb_record_type</fullName>
    <active>true</active>
    <label>cb record type</label>
</RecordType>